assets/scss/style.scss
.profile {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-60%);

  display: flex;
  flex-direction: column;
  align-items: center;

  .profile__image {
    margin-block-start: 3rem;
    border-radius: 100vh;
    width: 10em;

    @media screen and (prefers-color-scheme: dark) {
      opacity: 0.8;
    }
  }

  .profile__name {
    width: max-content;
    font-size: 2em;
    font-weight: bold;
  }

  .profile__brief {
    margin-block-start: 1rem;
  }

  .profile__links {
    margin-block-start: 5rem;
    font-size: 2em;

    a:not(:last-child) {
      margin-inline-end: 1em;
    }
  }
}

footer {
  text-align: center;
}

